--- a/DisplayLED/.cproject
+++ b/DisplayLED/.cproject
@@ -24,6 +24,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/FastLED}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/SoftwareSerial}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/SoftwareSerial/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/LEDMatrix}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.cpp.sketch.input.430125735" name="CPP source files" superClass="io.sloeber.compiler.cpp.sketch.input"/>
 							</tool>
@@ -34,6 +35,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/FastLED}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/SoftwareSerial}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/SoftwareSerial/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/LEDMatrix}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.c.sketch.input.554655397" name="C Source Files" superClass="io.sloeber.compiler.c.sketch.input"/>
 							</tool>
@@ -44,6 +46,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/FastLED}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/SoftwareSerial}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/SoftwareSerial/src}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/DisplayLED/libraries/LEDMatrix}&quot;"/>
 								</option>
 								<inputType id="io.sloeber.compiler.S.sketch.input.622422079" name="Assembly source files" superClass="io.sloeber.compiler.S.sketch.input"/>
 							</tool>
