--- a/DisplayLED/.project
+++ b/DisplayLED/.project
@@ -47,6 +47,11 @@
 			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/FastLED/FastLED-3.1.3</locationURI>
 		</link>
 		<link>
+			<name>libraries/LEDMatrix</name>
+			<type>2</type>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/libraries/LEDMatrix/LEDMatrix-1.0</locationURI>
+		</link>
+		<link>
 			<name>libraries/SoftwareSerial</name>
 			<type>2</type>
 			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/arduino/hardware/avr/1.6.17/libraries/SoftwareSerial</locationURI>
