lots of new stuff

--- a/DisplayLED/Release/makefile
+++ b/DisplayLED/Release/makefile
@@ -68,26 +68,25 @@ all: DisplayLED
 DisplayLED: $(HEX)
 	@echo 'Building target: $@'
 	@echo 'Printing size:'
-	"C:\eclipse-neon\eclipse\/arduinoPlugin/packages/arduino/tools/avr-gcc/4.9.2-atmel3.5.3-arduino2/bin/avr-size" -A "C:/Users/per-olavr/git/archery-shoot-control/DisplayLED/Release/DisplayLED.elf"
+	${JANTJE.SIZE.SWITCH}
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 C:\Users\per-olavr\git\archery-shoot-control\DisplayLED\Release\arduino.ar: $(AR_OBJ)
 	@echo 'Starting archiver'
-	"C:\eclipse-neon\eclipse\/arduinoPlugin/packages/arduino/tools/avr-gcc/4.9.2-atmel3.5.3-arduino2/bin/avr-gcc-ar" rcs    C:/Users/per-olavr/git/archery-shoot-control/DisplayLED/Release/arduino.ar $(AR_OBJ)
+	C:/Users/per-olavr/git/archery-shoot-control/DisplayLED/Release/arduino.ar $(AR_OBJ)
 	@echo 'Finished building: $@'
 	@echo ' '
 
 DisplayLED.elf: $(LINK_OBJ) $(AR)
 	@echo 'Starting combiner'
-	"C:\eclipse-neon\eclipse\/arduinoPlugin/packages/arduino/tools/avr-gcc/4.9.2-atmel3.5.3-arduino2/bin/avr-gcc" -Wall -Wextra -Os -g -flto -fuse-linker-plugin -Wl,--gc-sections -mmcu=atmega328p -o "C:\Users\per-olavr\git\archery-shoot-control\DisplayLED/Release/DisplayLED.elf"   $(LINK_OBJ) $(AR)   C:/Users/per-olavr/git/archery-shoot-control/DisplayLED/Release/arduino.ar  "-LC:\Users\per-olavr\git\archery-shoot-control\DisplayLED/Release" -lm
+	$(LINK_OBJ) $(AR)  C:/Users/per-olavr/git/archery-shoot-control/DisplayLED/Release/arduino.ar
 	@echo 'Finished building: $@'
 	@echo ' '
 
 DisplayLED.hex: $(ELF)
 	@echo 'Create eeprom image'
-	${A.RECIPE.OBJCOPY.EEP.PATTERN}
-	${A.RECIPE.OBJCOPY.HEX.PATTERN}
+	${JANTJE.OBJCOPY}
 	@echo 'Finished building: $@'
 	@echo ' '
 
